Get Exercise Details

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,5 +32,12 @@
             Drop
         </a></li>
     </ul>
+    
+    <h1>Exercise Details</h1>
+    <ul>
+        <li><a href = {{ url_for( 'get_page_exercise_details', exercise_id = 0 ) }}>
+            Bicep Curl Details
+        </a></li>
+    </ul>
 </body>
 </html>
