Exercise Details Routes

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,22 @@
         <li><a href = {{ url_for( 'get_page_exercise_details', exercise_id = 0 ) }}>
             Bicep Curl Details
         </a></li>
+        
+        <li><a href = {{ url_for( 'get_page_exercise_details', exercise_id = 1 ) }}>
+            Rows Details
+        </a></li>
+        
+        <li><a href = {{ url_for( 'get_page_exercise_details', exercise_id = 2 ) }}>
+            Squats Details
+        </a></li>
+        
+        <li><a href = {{ url_for( 'get_page_exercise_details', exercise_id = 3 ) }}>
+            Sit-Ups Details
+        </a></li>
+        
+        <li><a href = {{ url_for( 'get_page_exercise_details', exercise_id = 4 ) }}>
+            Running Details
+        </a></li>
     </ul>
 </body>
 </html>
