--- a/templates/index.html
+++ b/templates/index.html
@@ -58,15 +58,15 @@
     
     <h1>Login</h1>
     <ul>
-        <li><a href = {{ url_for( 'get_user_favorites', username = 'LeBron', email = 'KingJames@nba.com' ) }}>
+        <li><a href = {{ url_for( 'get_page_login', username = 'LeBron', email = 'KingJames@nba.com' ) }}>
             Login LeBron
         </a></li>
         
-        <li><a href = {{ url_for( 'get_user_favorites', username = 'Kobe', email = 'BeanBryant@nba.com' ) }}>
+        <li><a href = {{ url_for( 'get_page_login', username = 'Kobe', email = 'BeanBryant@nba.com' ) }}>
             Login Kobe
         </a></li>
         
-        <li><a href = {{ url_for( 'get_user_favorites', username = 'Tom Brady', email = 'DeflateGate@nfl.com' ) }}>
+        <li><a href = {{ url_for( 'get_page_login', username = 'Tom Brady', email = 'DeflateGate@nfl.com' ) }}>
             Login Brady
         </a></li>
     </ul>
