Script get_page_login

--- a/templates/index.html
+++ b/templates/index.html
@@ -69,6 +69,10 @@
         <li><a href = {{ url_for( 'get_page_login', username = 'Tom Brady', email = 'DeflateGate@nfl.com' ) }}>
             Login Brady
         </a></li>
+        
+        <li><a href = {{ url_for( 'get_page_login', username = 'Nobody', email = 'fake@news.com' ) }}>
+            Invalid Login
+        </a></li>
     </ul>
     
     <h1>User Favorites</h1>
