--- a/templates/index.html
+++ b/templates/index.html
@@ -130,6 +130,26 @@
     </ul>
     
     
+    <h1>Remove Favorite</h1>
+    <ul>
+        <li><a href = {{ url_for( 'remove_favorite_exercise', user_id = 23, exercise_id = 0 ) }}>
+            Remove Favorite: LeBron Bicep Curl
+        </a></li>
+        
+        <li><a href = {{ url_for( 'remove_favorite_exercise', user_id = 23, exercise_id = 2 ) }}>
+            Favorite Doesn't Exist
+        </a></li>
+        
+        <li><a href = {{ url_for( 'remove_favorite_exercise', user_id = -3, exercise_id = 0 ) }}>
+            User Doesn't Exist
+        </a></li>
+        
+        <li><a href = {{ url_for( 'remove_favorite_exercise', user_id = 23, exercise_id = -1 ) }}>
+            Exercise Doesn't Exist
+        </a></li>
+    </ul>
+    
+    
     <h1>User Favorites</h1>
     <ul>
         <li><a href = {{ url_for( 'get_user_favorites', user_id = 23 ) }}>
