Fix Exercise Routes

--- a/templates/index.html
+++ b/templates/index.html
@@ -60,19 +60,19 @@
     
     <h1>Exercise Search</h1>
     <ul>
-        <li><a href = {{ url_for( 'test_page_exercise_search', test_part = True, test_equipment = True ) }}>
+        <li><a href = {{ url_for( 'test_page_exercise_search', test_part = 1, test_equipment = 1 ) }}>
             Search Without User
         </a></li>
         
-        <li><a href = {{ url_for( 'test_page_exercise_search', test_part = True, test_equipment = True, user_id = 23 ) }}>
+        <li><a href = {{ url_for( 'test_page_exercise_search', test_part = 1, test_equipment = 1, user_id = 23 ) }}>
             Search With User
         </a></li>
         
-        <li><a href = {{ url_for( 'test_page_exercise_search', test_part = False, test_equipment = False ) }}>
+        <li><a href = {{ url_for( 'test_page_exercise_search', test_part = 0, test_equipment = 0 ) }}>
             Search Without Body Parts
         </a></li>
         
-        <li><a href = {{ url_for( 'test_page_exercise_search', test_part = True, test_equipment = False, user_id = 23 ) }}>
+        <li><a href = {{ url_for( 'test_page_exercise_search', test_part = 1, test_equipment = 0, user_id = 23 ) }}>
             Search Without Exercise
         </a></li>
     </ul>
